# draf

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  destroy.sh  docker-compose.yml
Flower/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  initToml.py  pyproject.toml  requirements.txt
Flower/federated_ex/: client_app.py  drift.py  fedPenAvg.py  logger.py  metaAggr.py  server_app.py  setup.py  task.py
Flower/tests/: test_client_app.py  test_driftDetection.py  test_fedPenAvg.py  test_server_app.py  test_task.py
terraform/: backend.tf  client.sh.tpl  main.tf  server.sh.tpl  variables.tf
terraform/modules/main/: main.tf
terraform/modules/server/: server.tf
